# secret_ftp

./: .gitignore  README.md
ftp_client/: Cargo.toml  private_key.pem  public_key.pem
ftp_client/src/: main.rs
ftp_client/src/utils/: cli_utils.rs  connection_commands.rs  fs_utils.rs  mod.rs  openssl_utils.rs  rocket_utils.rs
ftp_server/: Cargo.toml  public_key.pub  server.certs  server.key
ftp_server/src/: main.rs
ftp_server/src/utils/: fs_utils.rs  mod.rs  openssl_utils.rs
