[package]
name = "ftp_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
openssl = "0.10.64"
base64 = "0.22.1"
clap = "4.5.4"
clap_derive = "4.5.4"
shellwords = "1.0.0"
